style.css
/* ... */
.subscribe-inner:before {
	border-width: 3px;
	margin: 8px;
}

.subscribe-inner:after {
	border-width: 1px;
	margin: 14px;
}

.subscribe-inner > * {
	position: relative;
	z-index: 10;
}

.subscribe h3 {
	font-size: 28px;
	letter-spacing: -0.02em;
	margin: 0;
}

.subscribe p {
	font-size: 16px;
	line-height: 1.46;
	margin: 17px auto 0 auto;
	max-width: 400px;
}

.subscribe .button {
	margin: 15px 0 0;
}

@media ( min-width: 32em ) {

	.subscribe-inner {
		padding: 60px 75px;
	}
	
	.subscribe p {
		font-size: 20px;
		line-height: 1.4;
		margin-top: 16px;
	}
	
	.subscribe .button {
		margin: 25px 0 0;
	}
	
}

@media ( min-width: 47em ) {

	.subscribe {
		margin-bottom: 80px;
		padding: 100px 0;
	}

	.subscribe-inner {
		padding: 80px 100px;
	}
	
	.subscribe h3 {
		font-size: 38px;
	}
	
}

.social-area {
	margin-bottom: 20px;
	max-width: 637px;
}

.patriotic-title {
	align-items: center;
	display: flex;
	font-size: 28px;
	line-height: 1;
	justify-content: center;
	text-align: center;
}

.patriotic-title:before,
.patriotic-title:after {
	content: "";
	display: block;
	border-bottom: 9px solid #F5C826;
	border-top: 9px solid #2284D2;
	height: 0;
	width: 36px;
}

.patriotic-title span {
	background: #fff;
	padding: 0 15px;
	position: relative;
}

.patriotic-title span:before,
.patriotic-title span:after {
	border: 9px solid transparent;
	content: "";
	display: block;
	position: absolute;
	top: 50%;
	margin-top: -9px;
}

.patriotic-title span:before {
	border-left-color: #fff;
	left: -36px;
}

.patriotic-title span:after {
	border-right-color: #fff;
	right: -36px;
}

.patriotic-title span.desktop {
	display: none;
}

@media ( min-width: 32em ) {

	.patriotic-title {
		font-size: 32px;
		margin-bottom: 50px;
	}

	.patriotic-title span {
		padding: 0 20px;
	}
	
	.patriotic-title:before,
	.patriotic-title:after {
		border-bottom-width: 11px;
		border-top-width: 11px;
		width: 44px;
	}
	
	.patriotic-title span.desktop { display: inline; }
	.patriotic-title span.mobile { display: none; }
	
	.patriotic-title span:before,
	.patriotic-title span:after {
		border-width: 11px;
		margin-top: -11px;
	}
	
	.patriotic-title span:before { left: -44px; }
	.patriotic-title span:after { right: -44px; }

}

@media ( min-width: 47em ) {

	.social-area {
		margin-bottom: 50px;
	}

}

.social-links {
	display: flex;
	justify-content: center;
}

.social-links a {
	box-shadow: inset 8px 8px 0 #fff, inset -8px -8px 0 #fff, inset -11px -11px 0 #ddd, inset 11px 11px 0 #ddd;
	display: block;
	max-width: 33.3%;
	position: relative;
	width: 100%;
}

.social-links a:before {
	content: "";
	display: block;
	padding-bottom: 100%;
	width: 100%;
}

.social-links a:after {
	border: 1px solid #ddd;
	content: "";
	display: block;
	position: absolute;
		bottom: 14px;
		left: 14px;
		right: 14px;
		top: 14px;
}

.social-links .fa {
	align-items: center;
	color: #848484;
	display: flex;
	font-size: 32px;
	justify-content: center;
	position: absolute;
		bottom: 0;
		left: 0;
		right: 0;
		top: 0;
	transition: transform .3s ease-in-out;
}

.social-links a:hover .fa {
	transform: scale(1.25);
}

@media ( min-width: 47em ) {

	.social-links .fa {
		font-size: 48px;
	}

}

